Added layout for edit item

--- a/PRS112709_Z1/app/src/main/res/values/strings.xml
+++ b/PRS112709_Z1/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="ok">OK</string>
     <string name="saved">Item saved!</string>
     <string name="empty">Item can not be empty!</string>
+    <string name="delete">DELETE THIS NOTE</string>
 </resources>
