Simple TODO list DONEgit status!

--- a/PRS112709_Z1/app/src/main/res/values/strings.xml
+++ b/PRS112709_Z1/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="saved">Item saved!</string>
     <string name="empty">Item can not be empty!</string>
     <string name="delete">DELETE THIS NOTE</string>
+    <string name="changesSaved">Changes saved!</string>
+    <string name="error">ERROR!</string>
+    <string name="deleted">Item deleted!</string>
 </resources>
